Squashing Bugs
** Breakpoints need to be updated...agan =(

--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 :root {
   --main-color: #3c94cc;
-  /*--second-color: #dca68e;*/
+  --red-color: #dca68e;
   --second-color:#E16832;
   --black-color: #242421;
   --grey-color: #988c76;
@@ -31,8 +31,11 @@ body {
   -o-background-size: cover;
   -webkit-background-size: cover;
   height: 100vh;
+  width: 100%;
 }
-
+.centered{
+  margin: 0 auto;
+}
 div {
   background-color: #626262;
   -webkit-box-shadow: 0px 10px 50px -5px rgba(0, 0, 0, 0.75);
@@ -42,6 +45,7 @@ div {
 
 section {
   padding: 0 40px;
+  padding-bottom: 20px;
 }
 .section-border{
   border-bottom: 1px grey solid;
@@ -58,7 +62,8 @@ nav a {
 .nav1 {
   width: 75%;
   background-color: #FAFBF4;
-  margin: 20px 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .nav-blur {
@@ -72,6 +77,7 @@ nav a {
 }
 
 ul {
+  padding-left: -10px;
 }
 
 li {
@@ -79,10 +85,9 @@ li {
   list-style: none;
   margin: 0px 10px;
   padding-bottom: 2px;
-  font-size: 20px;
+  font-size: 24px;
   color: #E16832;
   transition: all ease 200ms;
-  padding-left: -10px;
 }
 
 li:hover {
@@ -94,7 +99,7 @@ li:hover > #current {
 }
 
 #current {
-  color: var(--primary-color);
+  color: var(--main-color);
   border-bottom: #2B2725 3px solid;
 }
 
@@ -103,11 +108,13 @@ li:hover > #current {
 }
 
 h1 {
-  color: lightblue;
-  font-family: 'Montaga', sans-serif;
+  color: var(--main-color);
+  font-family: 'Slabo 24px', sans-serif;
   font-weight: lighter;
   letter-spacing: .2em;
   font-size: 2em;
+  padding: 20px 0;
+  margin: 0;
 }
 
 h2 {
@@ -116,9 +123,11 @@ h2 {
 }
 
 p {
-  font-family:
-  font-size: 1.25em;
-  color: white;
+  font-family:'Slabo  24px', sans-serif;
+  font-size: 1.5em;
+  color: black;
+  padding: 10px 20px 10px 20px;
+  margin: 0;
 }
 .hero-width{
   width: 75%;
@@ -135,16 +144,16 @@ p {
 }
 
 .contact h1 {
-  color: var(--primary-color);
+  color: var(--second-color);
 }
 
 .social-bar {
-  background-color: #FAFBF4;
   margin-top: 1em;
   box-sizing: border-box;
-  width: 100%;
+  width: auto;
   height: 110px;
   border-radius: none;
+  background: none;
 }
 
 .snapcode-popup {
